# makim

./: .editorconfig  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  CNAME  Makefile  README.md  index.html  index.md  mkdocs.yaml  objects.inv  package-lock.json  precommit_errors.txt  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom_issue.md  feature_request.md
.github/workflows/: docs.yaml  main.yaml  release.yaml  stale.yaml  windows-tests.yml
changelog/: changelog.md  index.html
conda/: dev-win.yaml  dev.yaml  release.yaml
conda/constructor/: LICENSE.txt  construct.yaml
containers/: Dockerfile
contributing/: contributing.md  index.html
docs/: changelog.md  contributing.md  example.ipynb  features.md  index.md  installation.md  mkdocs.yaml  spec.md  template.md  xonsh.md
docs/tutorials/features/: .makim.yaml  makim-features.ipynb
docs/tutorials/introduction/: .makim.yaml  index.ipynb
docs/tutorials/makim-for-nox-users/: .makim.yaml  index.ipynb  noxfile.py
features/: features.md  index.html
installation/: index.html
makim/: __init__.py  __main__.py  cli.py  errors.py  makim.py
scripts/: clean-output.py
search/: search_index.json
spec/: index.html
src/makim/: __init__.py  __main__.py  cli.py  console.py  core.py  exceptions.py  logs.py  makim.py  makim_cli.py  pipelines.py  scheduler.py  schema.json  task_logging.py  utils.py  visualization.py
src/makim/cli/: __init__.py  auto_generator.py  config.py  cron_handlers.py  parser_cli.py  pipelines.py
template/: index.html
tests/: .containers-sugar.yaml  .makim-bash-group-scope.yaml  .makim-bash-main-scope.yaml  .makim-bash-target-scope.yaml  .makim-complex.yaml  .makim-env.yaml  .makim-simple.yaml  .makim-unittest.yaml  .makim-working-directory-absolute.yaml  .makim-working-directory-relative-path.yaml  .makim.yaml  __init__.py  test_containers-sugar.py  test_failure.py  test_makim.py  test_success.py
tests/benchmarks/: benchmark_platforms.py
tests/smoke/: .env-ssh  .makim-arg-validation.yaml  .makim-bash-group-scope.yaml  .makim-bash-main-scope.yaml  .makim-bash-target-scope.yaml  .makim-bash-task-scope.yaml  .makim-complex.yaml  .makim-dir-absolute-path.yaml  .makim-dir-no-path.yaml  .makim-dir-relative-path.yaml  .makim-env.yaml  .makim-failure-hook.yaml  .makim-file-log.yaml  .makim-hooks.yaml  .makim-interactive-args.yaml  .makim-interpreters.yaml  .makim-matrix-strategy.yaml  .makim-pipeline.yaml  .makim-retry.yaml  .makim-scheduler.yaml  .makim-simple.yaml  .makim-skip-errors.yaml  .makim-ssh.yaml  .makim-sugar.yaml  .makim-task-conditionals.yaml  .makim-unittest.yaml  .makim-vars.yaml  .makim-virtual-env.yaml  .makim-working-directory-absolute-path.yaml  .makim-working-directory-no-path.yaml  .makim-working-directory-relative-path.yaml  .scheduler.yaml  .sugar.yaml
tests/smoke/containers/: compose.yaml
tests/windows/: test_windows_compatibility.py
tutorials/features/makim-features/: index.html
tutorials/introduction/: index.html  index.ipynb
tutorials/makim-for-nox-users/: index.html  index.ipynb
xonsh/: index.html
