[tool.poetry]
name = "makim"
version = "1.13.0"  # semantic-release
description = "Simplify the usage of containers"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "BSD 3 Clause"
repository = "https://github.com/osl-incubator/makim"
homepage = "https://github.com/osl-incubator/makim"
readme = "README.md"

packages = [
  {include = "makim", from="src"},
]

include = ["src/makim/py.typed"]

exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.scripts]
"makim" = "makim.__main__:run_app"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
sh = ">=2.0.0"
pyyaml = ">=5.0"
jinja2 = ">=2.0"
xonsh = ">=0.14.0"
python-dotenv = ">=0.21.1"
typer = ">=0.9.0"
fuzzywuzzy = ">=0.18.0"
python-levenshtein = ">=0.23.0"
rich = ">=13.7.0"
shellingham = ">=1.5.4"

[tool.poetry.group.dev.dependencies]
containers-sugar = "1.11.1"
pytest = ">=7"
pre-commit = ">=3"
mypy = ">=1"
pytest-cov = ">=3.0.0"
mkdocs = ">=1.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.20.0"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8"
mkdocstrings = {version=">=0.19.0", extras=["python"]}
ruff = ">=0.1.5"
bandit = ">=1.7.5"
vulture = ">=2.7"
compose-go = ">=2.20.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 79
force-exclude = true
src = ["./src/makim", "./tests"]
exclude = [
  "docs",
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
  "I002", # isort
]
ignore = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"


[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/makim/"
skips = ["B102"]

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src/makim/"]
sort_by_size = true
verbose = false
