[project]
name = "makim"
version = "1.25.0"  # semantic-release
description = "Simplify the usage of containers"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD 3 Clause"
repository = "https://github.com/osl-incubator/makim"
homepage = "https://github.com/osl-incubator/makim"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
  "xhell >= 0.2.0",
  "pyyaml >= 5.0",
  "jinja2 >= 2.0",
  "xonsh >= 0.15.0",
  "python-dotenv >= 0.21.1",
  "typer >= 0.9.0",
  "fuzzywuzzy >= 0.18.0",
  "python-levenshtein >= 0.23.0",
  "rich >= 10.11.0",
  "shellingham >= 1.5.4",
  "jsonschema >= 4",
  "paramiko  >= 3.5.0",
  "types-paramiko >= 3.5.0",
  "apscheduler (>=3.11.0,<4.0.0)",
  "sqlalchemy (>=2.0.37,<3.0.0)"
]

[project.scripts]
"makim" = "makim.__main__:run_app"

[build-system]
requires = ["poetry-core>=2", "poetry>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "makim", from="src"},
]
include = [
  "src/makim/py.typed",
  "src/makim/schema.json",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pre-commit = ">=3"
mypy = ">=1"
pytest-cov = ">=3.0.0"
mkdocs = ">=1.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8"
mkdocstrings = {version=">=0.19.0", extras=["python"]}
ruff = ">=0.1.5"
bandit = ">=1.7.5"
vulture = ">=2.7"
jupyterlab = ">=4.1.5"
nox = ">=2024.3.2"
nbconvert = ">=7.16.3"
pymdown-extensions = ">=10.7.1"
pyinstaller = {version = ">=6.12.0", python = "<3.14"}


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = ["scripts/"]


[tool.ruff]
line-length = 79
force-exclude = true
src = ["./src/makim", "./tests"]
exclude = [
  "docs",
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
  "I002", # isort
]
ignore = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"


[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/makim/"
skips = ["B102", "B701", "B507", "B601", "B603"]

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = ["verbose", "dry_run", "skip_hooks"]
make_whitelist = true
min_confidence = 80
paths = ["src/makim/"]
sort_by_size = true
verbose = false
